# openidconnect_flutter

./: .gitignore  README.md  docker-compose.yml  melos.yaml  pubspec.yaml
.github/workflows/: dart.yml
example/: pubspec.yaml
example/lib/: choose.dart  client.dart  device.dart  identity_view.dart  interactive.dart  main.dart  password.dart
example/web/: callback.html  index.html
openidconnect/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml  pubspec_overrides.yaml
openidconnect/example/: pubspec.yaml  pubspec_overrides.yaml
openidconnect/lib/: openidconnect.dart  openidconnect_client.dart
openidconnect/test/: _setup.dart  identity_test.dart  native_authentication_support_test.dart  openidconnect_client_test.dart  openidconnect_conformance_test.dart  openidconnect_http_test.dart  openidconnect_test.dart
openidconnect/test_harness/: README.md  pubspec.yaml
openidconnect_android/: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml  pubspec_overrides.yaml
openidconnect_dart/: pubspec.yaml
openidconnect_darwin/: CHANGELOG.md  README.md  pubspec.yaml
openidconnect_linux/: CHANGELOG.md  README.md  pubspec.yaml
openidconnect_linux/linux/: CMakeLists.txt  openidconnect_linux_plugin.cc
openidconnect_linux/linux/include/openidconnect_linux/: openidconnect_linux_plugin.h
openidconnect_platform_interface/: CHANGELOG.md  README.md  pubspec.yaml
openidconnect_web/: CHANGELOG.md  README.md  pubspec.yaml
openidconnect_windows/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
(+147 files in other folders)
